[project]
name = "assets-tool"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "yang.yan", email = "yang.yan@motphys.com" }]
dependencies = [
    "dearpygui>=2.1.0",
    "usd-core>=25.8",
    "types-usd>=24.5.2",
    "numpy>=2.3.2",
    "software-client @ git+https://github.com/UnamedStudio/software-server.git@main#subdirectory=client",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = true
